# twitter_scraper

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
scraper/: db.py  urls.py  utils.py  views.py
scraper/static/: app.css
scraper/templates/: error.html  index.html  results.html
twitter_scraper/: asgi.py  settings.py  urls.py  wsgi.py
